--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#" class="logo"><span>e</span>ventO</a>
 
         <nav class="navbar">
-            <a href="#home">home Page</a>
+            <a href="#home">home</a>
             <a href="#service">service</a>
             <a href="#about">about us</a>
             <a href="#gallery">gallery</a>
