--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <section class="home" id="home">
 
         <div class="content">
+            <h2>test</h2>
             <h3>its time to celebrate! the best <span> event organizers </span></h3>
             <a href="#contact" class="btn">contact us</a>
         </div>
